--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,64 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import 'customize-bootstrap.scss';
+@import '../node_modules/bootstrap/scss/bootstrap';
+.img-card-dialog {
+    /* basic */
+    position: absolute;
+    background-color: #f57d49;
+    margin-top: 23%;
+    margin-left: -300px;
+    width: 550px;
+    height: 150px;
+    /* box-shadow */
+    -webkit-box-shadow: 0px 11px 7px -3px rgba(0, 0, 0, 0.6);
+    -moz-box-shadow: 0px 11px 7px -3px rgba(0, 0, 0, 0.6);
+    box-shadow: 0px 11px 7px -3px rgba(0, 0, 0, 0.6);
+    z-index: 1;
+}
+
+.container-img {
+    position: relative;
+    text-align: center;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.bottom {
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+h1 {
+    font-weight: bolder;
+}
+
+body {
+    position: relative;
+}
+
+.navbar-nav .nav-item {
+    margin-left: 30px;
+}
+
+.nav-item {
+    height: 150px;
+    width: 150px;
+    text-align: center;
+}
+
+.nav-item a {
+    padding-top: 50%;
+    color: grey;
+}
+
+.custom-shadow {
+    text-shadow: 2px 3px 6px #000000;
+}
