--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -10,13 +10,13 @@
       </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto nav nav-pills">
-                    <li class="nav-item" [ngClass]="{ 'current-section': currentSection === 'nosotros' }">
+                    <li class="nav-item">
                         <a class="nav-link" href="/home#nosotros">Nosotros</a>
                     </li>
-                    <li class="nav-item" [ngClass]="{ 'current-section': currentSection === 'invierte' }">
+                    <li class="nav-item">
                         <a class="nav-link" href="/home#invierte">invierte</a>
                     </li>
-                    <li class="nav-item" [ngClass]="{ 'current-section': currentSection === 'login' }">
+                    <li class="nav-item">
                         <a class="nav-link" routerLink="/login" routerLinkActive="active">Iniciar Sesión</a>
                     </li>
                 </ul>
@@ -24,174 +24,170 @@
         </div>
     </nav>
 
-    <div id="parentDiv" scrollSpy [spiedTags]="['DIV']" (sectionChange)="onSectionChange($event)">
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            </ol>
-            <div id="nosotros" class="carousel-inner">
-                <div class="img-card-dialog text-white align-middle"></div>
-                <div class="carousel-item active">
-                    <img class="d-block w-100" src="https://via.placeholder.com/1920x800" alt="First slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1 class="custom-shadow">Invierte con nosotros</h1>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="https://via.placeholder.com/1920x800" alt="Second slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1>Invierte con nosotros</h1>
-                        <p>...</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="d-block w-100" src="https://via.placeholder.com/1920x800" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h1>Invierte con nosotros</h1>
-                        <p>...</p>
-                    </div>
-                </div>
-            </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
 
-        <div class="container">
-            <div class="row pt-5">
-                <div class="col-lg-4">
-                    <div class="card text-center w-100" style="width: 18rem;">
-                        <div class="card-body" style="background-color: rgb(245, 125, 73); color:white">
-                            <h1>Card title</h1>
-                            <a href="#" class="btn mt-2 pl-5 pr-5 rounded-0 border border-light" style="color:white">Ver más</a>
-                            <div class="card-dialog-text mt-4" style="color:black">
-                                orem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card text-center w-100" style="width: 18rem;">
-                        <div class="card-body" style="background-color: rgb(245, 125, 73); color:white">
-                            <h1>Card title</h1>
-                            <a href="#" class="btn mt-2 pl-5 pr-5 rounded-0 border border-light" style="color:white">Ver más</a>
-                            <div class="card-dialog-text mt-4" style="color:black">
-                                orem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card text-center w-100" style="width: 18rem;">
-                        <div class="card-body" style="background-color: rgb(245, 125, 73); color:white">
-                            <h1>Card title</h1>
-                            <a href="#" class="btn mt-2 pl-5 pr-5 rounded-0 border border-light" style="color:white">Ver más</a>
-                            <div class="card-dialog-text mt-4" style="color:black">
-                                orem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="text-center container-img banner-margin-top">
-            <img src="https://via.placeholder.com/1920x300" class="img-fluid" alt="...">
-            <div class="banner-text centered text-white" style="z-index: 1;">
-                <h1 class="custom-shadow">
-                    Decidete por un mejor futuro
-                </h1>
-                <p>
-                    orem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                </p>
-            </div>
-        </div>
-
-
-        <div class="container pt-5 text-center text-center">
-            <h1>Conoce nuestra empresa</h1>
-            <div class="row pt-5">
-                <div class="col-lg col-sm-6 img-padding"><img src="https://via.placeholder.com/380x200" class="img-fluid" alt="Responsive image"></div>
-                <div class="col-lg col-sm-6 img-padding"><img src="https://via.placeholder.com/380x200" class="img-fluid" alt="Responsive image"></div>
-                <div class="col-lg col-sm-12 img-padding"><img src="https://via.placeholder.com/380x200" class="img-fluid" alt="Responsive image"></div>
-            </div>
-        </div>
-
-        <div id="invierte" class="container pt-5">
-            <div class="row">
-                <div class="col-lg img-padding text-center">
-                    <div class="img-card-dialog text-white align-middle"></div>
-                    <div class="container-img">
-                        <img src="https://via.placeholder.com/450" class="img-fluid" alt="Responsive image">
-                        <h1 class="centered text-white custom-shadow" style="z-index: 1;">
-                            Me Interesa
-                        </h1>
-                        <p class="bottom text-white">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-lg h-100 align-self-center">
-                    <form>
-                        <div class="form-group">
-                            <label for="email">Dirección Email</label>
-                            <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Ingresar email">
-                            <small id="emailHelp" class="form-text text-muted">No compartiremos tus datos con nadie más.</small>
-                        </div>
-                        <div class="form-group">
-                            <label for="name">Nombres y apellidos</label>
-                            <input type="text" class="form-control" id="name" placeholder="Ingresa tu nombre o nombres y apellidos">
-                        </div>
-                        <div class="form-group">
-                            <label for="number">Número celular</label>
-                            <input type="tel" class="form-control" id="number" placeholder="Ingresa tu número">
-                        </div>
-                        <button type="submit" class="btn btn-primary btn-lg btn-block">Quiero Invertir</button>
-                    </form>
-                </div>
-            </div>
-        </div>
-
-        <div class="container pt-5">
-            <div class="row">
-                <div class="col-lg-4 h-100 align-self-center">
-                    <h1>Conoce nuestra ubicación</h1>
-                    <button class="btn btn-primary btn-lg btn-block mt-4 mb-4">Cómo llegar</button>
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        </ol>
+        <div id="nosotros" class="carousel-inner">
+            <div class="img-card-dialog text-white align-middle"></div>
+            <div class="carousel-item active">
+                <img class="d-block w-100" src="https://via.placeholder.com/1920x800" alt="First slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1 class="custom-shadow">Invierte con nosotros</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
                 </div>
-                <div class="col-lg-6 offset-lg-2 text-center">
-                    <img src="https://via.placeholder.com/400" class="img-fluid" alt="Responsive image">
-                    <p><b>La calle de las sirenas, los Mochis Sinaloa, México.</b></p>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://via.placeholder.com/1920x800" alt="Second slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1>Invierte con nosotros</h1>
+                    <p>...</p>
+                </div>
+            </div>
+            <div class="carousel-item">
+                <img class="d-block w-100" src="https://via.placeholder.com/1920x800" alt="Third slide">
+                <div class="carousel-caption d-none d-md-block">
+                    <h1>Invierte con nosotros</h1>
+                    <p>...</p>
                 </div>
             </div>
         </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
 
-        <footer class="page-footer font-small blue pt-4">
-            <div class="footer-copyright text-center py-3">
-                <i class="fa fa-facebook"></i>
-                <i class="fa fa-instagram ml-2"></i>
-            </div>
-            <div class="container-fluid text-center">
-                <div class="row">
-                    <div class="col-md-4 mt-md-0 mt-3">
-                        <p><b>Correo.</b>prueba@sicuro.com</p>
-                    </div>
-                    <div class="col-md-4 mt-md-0 mt-3">
-                        <p>Sicuro Capital © WebSite 2019</p>
-                    </div>
-                    <div class="col-md-4 mt-md-0 mt-3">
-                        <p><b>Teléfono.</b> 668 1 23 45 76</p>
+    <div class="container">
+        <div class="row pt-5">
+            <div class="col-lg-4">
+                <div class="card text-center w-100" style="width: 18rem;">
+                    <div class="card-body" style="background-color: rgb(245, 125, 73); color:white">
+                        <h1>Card title</h1>
+                        <div class="card-dialog-text mt-4" style="color:black">
+                            orem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        </div>
                     </div>
                 </div>
             </div>
-        </footer>
+            <div class="col-lg-4">
+                <div class="card text-center w-100" style="width: 18rem;">
+                    <div class="card-body" style="background-color: rgb(245, 125, 73); color:white">
+                        <h1>Card title</h1>
+                        <div class="card-dialog-text mt-4" style="color:black">
+                            orem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-4">
+                <div class="card text-center w-100" style="width: 18rem;">
+                    <div class="card-body" style="background-color: rgb(245, 125, 73); color:white">
+                        <h1>Card title</h1>
+                        <div class="card-dialog-text mt-4" style="color:black">
+                            orem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
+
+    <div class="text-center container-img banner-margin-top">
+        <img src="https://via.placeholder.com/1920x300" class="img-fluid" alt="...">
+        <div class="banner-text centered text-white" style="z-index: 1;">
+            <h1 class="custom-shadow">
+                Decidete por un mejor futuro
+            </h1>
+            <p>
+                orem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+            </p>
+        </div>
+    </div>
+
+
+    <div class="container pt-5 text-center text-center">
+        <h1>Conoce nuestra empresa</h1>
+        <div class="row pt-5">
+            <div class="col-lg col-sm-6 img-padding"><img src="https://via.placeholder.com/380x200" class="img-fluid" alt="Responsive image"></div>
+            <div class="col-lg col-sm-6 img-padding"><img src="https://via.placeholder.com/380x200" class="img-fluid" alt="Responsive image"></div>
+            <div class="col-lg col-sm-12 img-padding"><img src="https://via.placeholder.com/380x200" class="img-fluid" alt="Responsive image"></div>
+        </div>
+    </div>
+
+    <div id="invierte" class="container pt-5">
+        <div class="row">
+            <div class="col-lg img-padding text-center">
+                <div class="img-card-dialog text-white align-middle"></div>
+                <div class="container-img">
+                    <img src="https://via.placeholder.com/450" class="img-fluid" alt="Responsive image">
+                    <h1 class="centered text-white custom-shadow" style="z-index: 1;">
+                        Me Interesa
+                    </h1>
+                    <p class="bottom text-white">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                    </p>
+                </div>
+            </div>
+            <div class="col-lg h-100 align-self-center">
+                <form>
+                    <div class="form-group">
+                        <label for="email">Dirección Email</label>
+                        <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Ingresar email">
+                        <small id="emailHelp" class="form-text text-muted">No compartiremos tus datos con nadie más.</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="name">Nombres y apellidos</label>
+                        <input type="text" class="form-control" id="name" placeholder="Ingresa tu nombre o nombres y apellidos">
+                    </div>
+                    <div class="form-group">
+                        <label for="number">Número celular</label>
+                        <input type="tel" class="form-control" id="number" placeholder="Ingresa tu número">
+                    </div>
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">Quiero Invertir</button>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="container pt-5">
+        <div class="row">
+            <div class="col-lg-4 h-100 align-self-center">
+                <h1>Conoce nuestra ubicación</h1>
+                <button class="btn btn-primary btn-lg btn-block mt-4 mb-4">Cómo llegar</button>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
+            </div>
+            <div class="col-lg-6 offset-lg-2 text-center">
+                <img src="https://via.placeholder.com/400" class="img-fluid" alt="Responsive image">
+                <p><b>La calle de las sirenas, los Mochis Sinaloa, México.</b></p>
+            </div>
+        </div>
+    </div>
+
+    <footer class="page-footer font-small blue pt-4">
+        <div class="footer-copyright text-center py-3">
+            <i class="fa fa-facebook"></i>
+            <i class="fa fa-instagram ml-2"></i>
+        </div>
+        <div class="container-fluid text-center">
+            <div class="row">
+                <div class="col-md-4 mt-md-0 mt-3">
+                    <p><b>Correo.</b>prueba@sicuro.com</p>
+                </div>
+                <div class="col-md-4 mt-md-0 mt-3">
+                    <p>Sicuro Capital © WebSite 2019</p>
+                </div>
+                <div class="col-md-4 mt-md-0 mt-3">
+                    <p><b>Teléfono.</b> 668 1 23 45 76</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
