--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,10 +11,10 @@
     </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item" [ngClass]="{ 'current-section': currentSection === 'inicio' }">
+                    <li class="nav-item">
                         <a class="nav-link" routerLink="/home" routerLinkActive="active">Inicio</a>
                     </li>
-                    <li class="nav-item active" [ngClass]="{ 'current-section': currentSection === 'sesion' }">
+                    <li class="nav-item active">
                         <a class="nav-link" routerLink="/login" routerLinkActive="active">Iniciar Sesión</a>
                     </li>
                 </ul>
